--- a/frontend-postgres-practice/src/App.css
+++ b/frontend-postgres-practice/src/App.css
@@ -1,23 +1,16 @@
 .App {
-  /* text-align: center; */
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  max-height: 100vh;
+  width: 100vw;
 }
 
-.App-link {
-  color: #61dafb;
+.Nav {
+  height: 5vh;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.Routes {
+  height: 95vh;
+  text-align: center;
 }
